[package]
name = "assert_matches"
description = "Asserts that a value matches a pattern"

version = "1.1.0"
authors = ["Murarth <murarth@gmail.com>"]

documentation = "https://docs.rs/assert_matches/"
homepage = "https://github.com/murarth/assert_matches"
repository = "https://github.com/murarth/assert_matches"

keywords = ["assert", "match", "pattern"]
license = "MIT/Apache-2.0"
readme = "README.md"
