[package]
name = "assert_matches"
description = "Asserts that a value matches a pattern"

version = "1.4.0"
authors = ["Murarth <murarth@gmail.com>"]

documentation = "https://docs.rs/assert_matches/"
homepage = "https://github.com/murarth/assert_matches"
repository = "https://github.com/murarth/assert_matches"

keywords = ["assert", "match", "pattern"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"
